--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 body,html{
-    height:300%;
-    width:100%;
+    height:210%;
+    width:90%;
+    max-width:90%;
     font-family: "Inter",serif;
+    overflow-x: hidden;
 
 }
 header{
@@ -16,6 +18,23 @@ header{
     font-weight:bold;
     color:black;
     z-index:100;
+}
+footer{
+    height:200px;
+    width:100%;
+    background-color: #000000;
+    color:white;
+    position: absolute;
+    bottom:-350%;
+    margin:0;
+    left:0;
+    display: flex;
+}
+footer p,footer h1{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin:20px;
 }
 #logo{
     height:80px;
@@ -136,20 +155,108 @@ box-shadow: 0px 10px 20px inset;
     position:absolute;
     z-index:2000;
     height:480px;
-    width:100%;
+    width:98%;
     background-color:#000000;
     top:130%;
     left:0;
+    border-radius:20px;
+    left:2%;
+    margin:0;
+    
 
 }
 #primeiro-video{
     position:absolute;
-    left:-40%;
+    left:-38%;
+    display:none;
 }
 #segundo-video{
     position:absolute;
-    left:-20%;
+    left:-18%;
+    display:none;
 }
+.text{
+    font: size 15px;
+    font-weight:1px solid white;
+    color:white;
+    width:600px;
+    position:absolute;
+    left:45%;
+    top:45%;
+    display: none;
+
+}
+#shoes{
+   position:absolute;
+    top:-10%;
+    left:30%;
+}
+#just{
+    position: absolute;
+    left:38%;
+    height:500px;
+}
+#lista {
+    position: absolute;
+    top: 220%;
+    height: auto; 
+    width: 400%;
+    display: flex;
+    gap: 20px;
+    padding: 50px;
+    left: 0;
+    background-color: #e2f1e188;
+    overflow: hidden;
+}
+video{
+    position: absolute;
+    top:280%;
+    left:10%;
+    height:100%;
+    margin:0;
+}
+#fundo-do-video{
+
+}
+#lista::before {
+    content: 'TÊNIS DA MODA';
+    position: absolute;
+    top: -10%;
+    left: 45%;
+    font-size: 30px;
+    font-weight: bold;
+}
+#click-esquerdo, #click-direito {
+    color: white;
+    background-color: rgb(0, 0, 0);
+    border-radius: 50px;
+    border: none;
+    font-weight: bold;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 30px;
+    cursor: pointer;
+    position: absolute;
+    top: 240%;
+    z-index: 10;
+}
+#click-esquerdo {
+    left: 10px;
+}
+#click-direito {
+    right: 10px;
+}
+#click-esquerdo:hover, #click-direito:hover {
+    background-color: rgb(216, 205, 205);
+    color: black;
+}
+.sapatos {
+    background-color: black;
+    height: 200px;
+    width: 200px;
+    border-radius: 25px;
+}
+
+
 @media (max-width:768px){
     header{
         width:200%;
